@@ -26,6 +26,18 @@ dependencies {
     implementation 'com.mojang:brigadier:1.0.18'
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    jvmArgs '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs '--enable-preview'
+}
+
 test {
     useJUnitPlatform()
 }
